[Add] date click function

--- a/js_calendar/style.css
+++ b/js_calendar/style.css
@@ -1,3 +1,12 @@
+#calendar {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+section {
+  margin: 10px;
+}
+
 h1 {
   font-size: 18px;
 }
@@ -19,4 +28,8 @@ td:first-child {
 
 td:last-child {
   color: royalblue;
+}
+
+td.is-disabled {
+  color: #ccc;
 }
